--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
-requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry]
 name = "core-execute"
 version = "0.1.0"
 description = "Core Automation Engine execute Lambda function"
-authors = [ "James Barwick <jbarwick@me.com>",]
+authors = ["James Barwick <jbarwick@me.com>"]
 license = "GPL-3.0-only"
 readme = "README.md"
 
@@ -53,3 +53,6 @@ black = "^24.10.0"
 boto3-stubs = "^1.35.76"
 pytest-dotenv = "^0.5.2"
 types-pyyaml = "^6.0.12.20240917"
+
+[tool.poetry.scripts]
+core-execute = "core_execute.cli:main"
