--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,8 @@
 [pytest]
-addopts = --maxfail=1 --disable-warnings
+addopts = -s --maxfail=1 --disable-warnings --cov=core_execute --cov-report=term-missing --cov-report=html
 testpaths = tests
 python_files = test_*.py
 asyncio_default_fixture_loop_scope = session
+env_override_existing_values = true
+env_files =
+    .env
