--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,11 +36,11 @@ pyyaml-include = "^2.1"
 
 [tool.poetry.dependencies.sck-core-db]
 path = "../sck-core-db"
-depend = true
+develop = true
 
 [tool.poetry.dependencies.sck-core-framework]
 path = "../sck-core-framework"
-depend = true
+develop = true
 [tool.poetry-dynamic-versioning.files."core_execute/_version.py"]
 persistent-substitution = true
 initial-content = "  \"\"\"\n  This is the version informatooin for this template\n  \"\"\"\n  __version__ = \"0.0.0\"\n  __version_tuple__ = (0, 0, 0)\n"
