--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry]
 name = "sck-core-execute"
-version = "0.0.5"
+version = "0.0.6"
 description = "Core Automation Engine execute Lambda function"
 authors = ["James Barwick <jbarwick@me.com>"]
 license = "GPL-3.0-only"
@@ -33,11 +33,16 @@ PyYAML = "^6.0.2"
 pyyaml-include = "^2.1"
 rich = "^13.9.4"
 darkdetect = "^0.8.0"
-sck-core-framework = "^0.0.5"
-sck-core-db = "^0.0.5"
 sck-core-report = "^0.0.5"
 
 
+[tool.poetry.dependencies.sck-core-db]
+path = "../sck-core-db"
+develop = true
+
+[tool.poetry.dependencies.sck-core-framework]
+path = "../sck-core-framework"
+develop = true
 [tool.poetry-dynamic-versioning.substitution]
 files = ["core_execute/__init__.py"]
 
