--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry]
 name = "sck-core-execute"
-version = "0.0.7-pre.3+5d59beb"
+version = "0.0.7"
 description = "Core Automation Engine execute Lambda function"
 authors = ["James Barwick <jbarwick@me.com>"]
 license = "GPL-3.0-only"
@@ -27,17 +27,11 @@ style = "semver"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-boto3 = ">=1.35.93"
-botocore = ">=1.35.93"
+boto3 = ">=1.39.9"
+botocore = ">=1.39.9"
 inflect = "^7.5.0"
-
-[tool.poetry.dependencies.sck-core-db]
-path = "../sck-core-db"
-develop = true
-
-[tool.poetry.dependencies.sck-core-framework]
-path = "../sck-core-framework"
-develop = true
+sck-core-framework = "^0.0.7"
+sck-core-db = "^0.0.7"
 
 [tool.poetry-dynamic-versioning.substitution]
 files = ["core_execute/__init__.py"]
@@ -48,6 +42,6 @@ flake8 = "^7.1.1"
 cfn-lint = "^1.22.3"
 pytest-asyncio = "^0.25.0"
 black = "^24.10.0"
-boto3-stubs = ">=1.35.93"
+boto3-stubs = ">=1.39.9"
 pytest-dotenv = "^0.5.2"
 pytest-cov = "^6.0.0"
